# mod_lsapi

./: CMakeLists.txt  README.md
cmake/: FindApacheForCPanel.cmake
conf/: lsapi.conf  mod_lsapi.conf
install/: da_cb_install
src/include/: lsapidef.h  lscapi.h  lscapi_config.h  lscapi_util.h
src/liblscapi-util/: config.c  connect.c  do.c  httpreq.c  mutex.c  parsevars.c  pool.c  starter.c  sulsphp.c
src/mod_lsapi/: mod_lsapi.c
